--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jonathanmani/MealPlanner#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.32.0",
     "connect-mongo": "^4.6.0",
     "daisyui": "^2.31.0",
     "dotenv": "^16.0.2",
